tests/fixtures/invalid/pow_bytes_none_dict.py
# Cannot call pow() with Bytes, None, Dict[str, int]
x = pow(b"hello", None, {"a": 1})
